[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/traps/blade_1.png" type="Texture" id=1]
[ext_resource path="res://scripts/minigame/obstacles.gd" type="Script" id=2]
[ext_resource path="res://assets/traps/large_post.png" type="Texture" id=3]
[ext_resource path="res://assets/traps/nut_over_top_over_wood.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 106.957

[node name="area" type="Area2D" groups=[
"obstacles",
]]
script = ExtResource( 2 )

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="visibilityNotifier" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 7.18603, 7.18603 )

[node name="blade" type="Sprite" parent="."]
scale = Vector2( 0.410089, 0.410089 )
texture = ExtResource( 1 )

[node name="wood" type="Sprite" parent="."]
position = Vector2( -0.59169, 203.664 )
scale = Vector2( 0.198272, 0.259895 )
texture = ExtResource( 3 )

[node name="nut_over_top_over_wood" type="Sprite" parent="."]
scale = Vector2( 0.515324, 0.515324 )
texture = ExtResource( 4 )
[connection signal="body_entered" from="." to="." method="_on_area_body_entered"]
[connection signal="screen_entered" from="visibilityNotifier" to="." method="_on_visibilityNotifier_screen_entered"]
[connection signal="screen_exited" from="visibilityNotifier" to="." method="_on_visibilityNotifier_screen_exited"]
